--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -153,3 +153,35 @@ p, a{
     top: 175px;
     left: 598px;
 }
+.PAS {
+    color: white;
+    font-size: 42px;
+    font-weight: 800;
+    letter-spacing: 7px;
+    position: absolute;
+    top: 345px;
+    left: 630px;
+}
+.CRE {
+    color: white;
+    font-size: 42px;
+    font-weight: 800;
+    letter-spacing: 7px;
+    position: absolute;
+    top: 390px;
+    left: 468px;
+}
+.ROL {
+    color: white;
+    font-size: 42px;
+    font-weight: 800;
+    letter-spacing: 7px;
+    position: absolute;
+    top: 435px;
+    left: 530px;
+}
+.Flecha {
+    position: absolute;
+    top: 520px;
+    left: 600px;
+}
