--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -419,12 +419,30 @@ h2 {
 }
 .ContenedorFooter {
     background-color: #171717;
-    height: 165px;
+    height: 110px;
+    display: flex;
+    justify-content: space-around;
+    padding-bottom: 50px;
 }
 .logo3 {
     height: 87px;
     width: 230px;
     position: relative;
     top: 35px;
-    left: 1145px;
+    left: 700px;
+}
+.redes {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    top: 40px;
+    left: 740px;
+}
+.Derecha1 {
+    position: relative;
+    right: 730px;
+    top: 40px;
+}
+.Derecha a {
+    text-decoration: none;
 }
