--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -506,6 +506,14 @@ h2 {
     font-size: 22px;
     font-weight: 800;
     position: absolute;
-    top: 200;
-    left: 830px;    
+    top: 200px;
+    left: 833px;    
+    text-decoration: none;
+}
+.Press {
+    color: #171717;
+    font-size: 18px;
+    position: absolute;
+    top: 220px;
+    left: 833px;
 }
