--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -526,3 +526,10 @@ h2 {
     left: 833px;
     text-decoration: none;
 }
+.Investors {
+    color: #171717;
+    font-size: 18px;
+    position: absolute;
+    top: 320px;
+    left: 833px;
+}
