--- a/estilo/estilo.css
+++ b/estilo/estilo.css
@@ -21,7 +21,7 @@ p, a {
     text-decoration: none;
 }
 .Centro a:hover {
-    color:red;
+    color:#db0d15;
 }
 .Medio {
     margin-left: 10px;
@@ -32,7 +32,7 @@ p, a {
     justify-content: space-evenly;
 }
 .Derecha a:hover {
-    color:red;
+    color:#db0d15;
 }
 .Facebook {
     color: #3a3a3a;
@@ -118,7 +118,7 @@ p, a {
 .Flecha {
     display:flex;
     text-decoration: none;
-    color: red;
+    color: #db0d15;
     width: 40px;
     position: absolute;
     top: 570px;
@@ -147,7 +147,7 @@ p, a {
     position: absolute;
     top: 1210px;
     left: 150px;
-    border: 2px solid red;
+    border: 2px solid #db0d15;
     border-radius: 100px;
     height: 50px;
     width: 250px;
@@ -159,8 +159,8 @@ p, a {
     top: -7px;
 }
 .BotonA:hover {
-    background-color: red;
-    border: 2px solid red;
+    background-color: #db0d15;
+    border: 2px solid #db0d15;
     margin-top: 3px;
     margin-left: -8px;
     border-radius: 100px;
@@ -173,7 +173,7 @@ p, a {
     position: absolute;
     top: 1210px;
     left: 420px;
-    border: 2px solid red;
+    border: 2px solid #db0d15;
     border-radius: 100px;
     height: 50px;
     width: 250px;
@@ -185,8 +185,8 @@ p, a {
     top: -7px;
 }
 .BotonB:hover {
-    background-color: red;
-    border: 2px solid red;
+    background-color: #db0d15;
+    border: 2px solid #db0d15;
     margin-top: 3px;
     margin-left: -8px;
     border-radius: 100px;
@@ -208,7 +208,7 @@ p, a {
     position: absolute;
     top: 1210px;
     left: 800px;
-    border: 2px solid red;
+    border: 2px solid #db0d15;
     border-radius: 100px;
     height: 50px;
     width: 250px;
@@ -220,8 +220,8 @@ p, a {
     top: -7px;
 }
 .BotonC:hover {
-    background-color: red;
-    border: 2px solid red;
+    background-color: #db0d15;
+    border: 2px solid #db0d15;
     margin-top: 3px;
     margin-left: -8px;
     border-radius: 100px;
@@ -234,7 +234,7 @@ p, a {
     position: absolute;
     top: 1210px;
     left: 1070px;
-    border: 2px solid red;
+    border: 2px solid #db0d15;
     border-radius: 100px;
     height: 50px;
     width: 250px;
@@ -246,8 +246,8 @@ p, a {
     top: -7px;
 }
 .BotonD:hover {
-    background-color: red;
-    border: 2px solid red;
+    background-color: #db0d15;
+    border: 2px solid #db0d15;
     margin-top: 3px;
     margin-left: -8px;
     border-radius: 100px;
@@ -268,12 +268,12 @@ h2 {
     font-size: 30px;
 }
 .Rojo {
-    color: red;
+    color: #db0d15;
     font-weight: 800;
     font-size: 30px;
 }
 .Rojo2 {
-    color: red;
+    color: #db0d15;
     font-weight: 800;
     font-size: 30px;
 }
@@ -313,14 +313,14 @@ h2 {
     display: flex;
 }
 .STU {
-    color: red;
+    color: #db0d15;
     position: relative;
     top: 20px;
     font-size: 45px;
     font-weight: 800;
 }
 .CON {
-    color: red;
+    color: #db0d15;
     position: relative;
     top: 20px;
     left: 830px;
@@ -453,7 +453,7 @@ h2 {
     left: 740px;
 }
 .redes a:hover {
-    color: red;
+    color: #db0d15;
 }
 .Derecha1 {
     display: flex;
@@ -466,7 +466,7 @@ h2 {
     font-size: 15px;
 }
 .Derecha1 a:hover {
-    color: red;
+    color: #db0d15;
 }
 .Copy {
     color: #4f575e;
@@ -557,4 +557,10 @@ h2 {
     top: 500px;
     left: 833px;
     text-decoration: none;
+}
+.ultimo {
+    position: relative;
+    top: 430px;
+    left: 850px;
+    background: #db0d15;
 }
